<?xml version="1.0" encoding="utf-8"?><!--
@author wang wei
@author li yilei
@author dong ziqi
 -->
<resources>
    <string name="app_name">Sudoku</string>
    <string name="long_app_name">Android Sudoku</string>
    <string name="action_settings">Settings</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="ok_label">OK</string>
    <string name="about_title">About Sudoku</string>
    <string name="about_text">\
This game is a logic-based, combinatorial number-placement puzzle. \n\
\n\ The objective is to fill a 9×9 grid with digits so that each column, each row,
        and each of the nine 3×3 subgrids that compose the grid (also called "boxes", "blocks", or "regions")
        contains all of the digits from 1 to 9. The puzzle setter provides a partially completed grid,
        which for a well-posed puzzle has a single solution.
</string>
    <string name="win_title">WIN!</string>
    <string name="win_text">You solved it!</string>
    <string name="difficulty_label">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="keypad_label">Keypad</string>

    <string name="game_title">Game</string>
    <string name="no_moves_label">No moves</string>
    <string name="keypad_title">Keypad</string>
</resources>
