<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="@dimen/elevation_high"
    android:orientation="vertical"
    android:padding="@dimen/menu_padding"
    tools:context=".MainFragment">
    <!--
@author wang wei
@author li yilei
@author dong ziqi
 -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/menu_space"
        android:text="@string/long_app_name"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/text_color"
        android:textSize="@dimen/menu_text_size" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="@dimen/menu_text_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_button_margin"
        android:background="@color/button_color"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/continue_label" />

    <Button
        android:id="@+id/new_button"
        android:layout_width="@dimen/menu_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:background="@color/button_color"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/new_game_label" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="@dimen/menu_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:background="@color/button_color"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/about_label" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="@dimen/menu_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:background="@color/button_color"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/exit_label" />
</LinearLayout>